TFP-6942: splitting av tilrettelegging per arbeidsforhold  (#7901)
* Revert "TFP-6942 - fikset at konstruktør for svp entitet ikke satt flagget ar… (#7880)"

This reverts commit a0dae349f28ac919cf98757abdd1f4f6b2c44427.

* Revert "TFP-6942 Legg til @NotNull-validering på nye SVP-arbeidsforhold-felter (#7877)"

This reverts commit 148b01353e603a793519ea823116f5f443219e58.

* TFP-6942: splitting av tilrettelegging per arbeidsforhold

Reverter TFP-6942 som la til ARBEIDSFORHOLD_ER_SPLITTET-kolonne og
tilhørende logikk. Legger til ny migrering som dropper kolonnen,
fjerner splittelogikk fra tjenester og oppdaterer validering.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* legg til test på splitting i SvangerskapspengerTjenesteTest

* TFP-6942: refaktorer oppdaterer med TilretteleggingEndringStatus record

- Introduserer TilretteleggingEndringStatus record for å tracke endring og gammel/ny tilrettelegging
- Forenkler historikkinnslagtjenesten ved å fjerne duplikat-logikk for matching og endringssjekk
- Støtter oppslag uten tilretteleggingId ved splitting (faller tilbake på arbeidsgiver-matching)
- Sammenligner internArbeidsforholdRef i erTilretteleggingEndret
- Rydder opp i mapNyTilrettelegging og fjerner utdaterte hjelpemetoder

* feat(svp): legg til eksternArbeidsforholdRef i historikkinnslag

Viser siste 4 tegn av ekstern arbeidsforhold-referanse i
historikkinnslaget for å skille mellom flere arbeidsforhold
hos samme arbeidsgiver. Refaktorerer også TilretteleggingEndringStatus
til TilretteleggingEndring med støtte for splitt/reverser-splitt.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* refactor(svp): forbedre historikkinnslag-tekster og splitt-logikk

Fikser antall i splitt-melding, forenkler opphold-formatering,
bruker konsistent tekst for fjernet/lagt til perioder,
og retter splitt/reverser-betingelse til å sjekke tilretteleggingId.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* test(svp